gcc/testsuite/gdc.test/compilable/test18694.d
struct S { enum int x = 42; }
static S dummy;
pure int fun(int x)
{
    return dummy.x + x;
}

void main()
{}
