gcc/testsuite/gdc.test/fail_compilation/fail5733.d
struct Test
{
    struct opDispatch(string dummy)
    { enum opDispatch = 1; }
}
auto temp = Test().foo!(int);
